ChangeLog for pommed
--------------------

version 1.15:
	- pommed: add support for the MacBook Air1,1.

version 1.14:
	- pommed: fix error handling in the audio sample loading code to
	properly report failure, preventing nasty segfaults later on in
	case the sound file is not available.
	- pommed: make goutte.wav the default beep sound, add click.wav
	and remove the KDE beep sound.

version 1.13:
	- pommed: add an option to disable the beep on volume change.
	- pommed: add the videoSwitch DBus notification.
	- wmpomme: add video switch support.
	- gpomme: add video switch support.
	- pommed: add support for LCD backlight control on the Intel 965GM
	found in the MacBook3,1.
	- pommed: rework the inotify code to handle several events at once
	and to handle events with long filenames (longer than
	sizeof(struct inotify_event)); pommed could enter a busy-loop when
	receiving an inotify event with ie->len > sizeof(struct inotify_event).

version 1.12:
	- pommed: do not expect at least 3 evdevs at startup; there are
	only 2 on the MacBook, and possibly only 1 on the pmac machines.

version 1.11:
	- pommed: beep on volume change, now that we have the audio code
	in pommed itself.
	- gpomme: remove audio-related code.
	- pommed: partial support (ie. no LCD backlight yet) for the
	MacBook3,1 (MacBook Core2 Duo Santa Rosa, November 2007).
	- pommed: rework the event management. Use epoll() for event
	polling instead of poll(). Use inotify to watch new event devices
	appear in /dev/input. This effectively fixes our disappearing
	event devices issues after suspend. YAY.
	- pommed: add support for the external Apple USB keyboards, white
	& alu. If you have such a keyboard with another USB ID, please
	contact me. Patch from Carmine 'earcar' Paolino <earcar@gmail.com>.
	- pommed: add secondary locations for the uinput device
	node. Heads up & patch from Carmine 'earcar' Paolino.

version 1.10:
	- pommed: add a beeper feature as a substitute to the missing PC